# engine

./: BUILD.gn
assets/: directory_asset_bundle.cc  directory_asset_bundle.h  unzipper_provider.cc  zip_asset_store.cc  zip_asset_store.h
common/: config.gni  settings.cc  settings.h  threads.cc  threads.h
content_handler/: app.cc  app.h  application_controller_impl.cc  application_controller_impl.h  rasterizer.cc  rasterizer.h  runtime_holder.cc  runtime_holder.h  service_protocol_hooks.cc
examples/flutter_example/: .packages  pubspec.yaml
examples/flutter_example/lib/: main.dart
examples/hello_flutter/lib/: main.dart
examples/spinning_square/lib/: main.dart
flow/: BUILD.gn  compositor_context.h  gl_connection.cc  gl_connection.h  instrumentation.h  open_gl.h  raster_cache.cc  raster_cache.h  scene_update_context.cc  scene_update_context.h
flow/layers/: backdrop_filter_layer.cc  backdrop_filter_layer.h  child_scene_layer.cc  child_scene_layer.h  clip_path_layer.cc  clip_path_layer.h  clip_rect_layer.cc  clip_rect_layer.h  clip_rrect_layer.cc  clip_rrect_layer.h  color_filter_layer.cc  color_filter_layer.h  container_layer.cc  container_layer.h  layer.h  layer_tree.cc  layer_tree.h  opacity_layer.cc  opacity_layer.h  performance_overlay_layer.cc  performance_overlay_layer.h  physical_model_layer.cc  picture_layer.cc  picture_layer.h  shader_mask_layer.cc  shader_mask_layer.h  transform_layer.cc  transform_layer.h
fml/: BUILD.gn  mapping.h
glue/: BUILD.gn  task_runner_adaptor.cc  task_runner_adaptor.h  trace_event.h
lib/io/: dart_io.h
lib/jni/: jni_api.cc  jni_class.cc  jni_object.cc
lib/snapshot/: BUILD.gn  snapshot.c.tmpl  snapshot.dart
lib/ui/: BUILD.gn  dart_runtime_hooks.cc  dart_runtime_hooks.h  dart_ui.cc  dart_ui.h  ui_dart_state.cc
lib/ui/compositing/: scene_builder.cc
lib/ui/painting/: canvas.cc  gradient.cc  image_decoding.cc  image_shader.cc  matrix.cc  paint.cc  path.cc  resource_context.cc  rrect.cc  vertices.cc
lib/ui/text/: paragraph.cc  paragraph_builder.cc  text_box.cc
lib/ui/window/: platform_message_response_dart.cc  pointer_data_packet.h  window.cc
runtime/: BUILD.gn  dart_controller.cc  dart_controller.h  dart_init.cc  dart_init.h  dart_service_isolate.cc  embedder_resources.cc  platform_impl.h  runtime_controller.cc  runtime_controller.h  runtime_init.cc
shell/common/: BUILD.gn  animator.cc  animator.h  engine.cc  engine.h  null_rasterizer.cc  null_rasterizer.h  platform_view.cc  platform_view.h  platform_view_service_protocol.cc  rasterizer.h  shell.cc  shell.h  skia_event_tracer_impl.cc  surface.h  switches.cc  tracing_controller.cc  tracing_controller.h  vsync_waiter_fallback.cc  vsync_waiter_fallback.h
shell/common/diagnostic/: diagnostic_server.cc
shell/gpu/: BUILD.gn  gpu_rasterizer.cc  gpu_rasterizer.h  gpu_surface_gl.cc  gpu_surface_gl.h  gpu_surface_software.h  gpu_surface_vulkan.h
shell/platform/: BUILD.gn
shell/platform/android/: BUILD.gn  android_context_gl.cc  android_context_gl.h  android_environment_gl.h  android_native_window.h  android_surface_gl.cc  android_surface_gl.h  flutter_main.cc  platform_view_android.cc  platform_view_android.h  vsync_waiter_android.cc  vsync_waiter_android.h
shell/platform/linux/: BUILD.gn  main.cc  message_pump_glfw.cc  message_pump_glfw.h  platform_view_glfw.cc  platform_view_glfw.h
shell/platform/win/: BUILD.gn  linmath.h  main.cc  message_pump_glfw.cc  message_pump_glfw.h  platform_view_glfw.cc  platform_view_glfw.h  testing.cc  vsync_waiter_glfw.cc  vsync_waiter_glfw.h
shell/testing/: BUILD.gn  platform_view_test.h  test_runner.h  testing.cc
skia/: BUILD.gn
skia/config/: SkUserConfig.h
skia/ext/: SkMemory_new_handler.cpp  event_tracer_impl.cc  event_tracer_impl.h
sky/engine/: BUILD.gn
sky/engine/core/: BUILD.gn
sky/engine/platform/: BUILD.gn  (+1 more)
snapshotter/: main.cc
synchronization/: debug_thread_checker.h  pipeline.h  semaphore.cc  semaphore.h
vulkan/: BUILD.gn  vulkan_backbuffer.h  vulkan_handle.h  vulkan_proc_table.cc  vulkan_proc_table.h  vulkan_surface.h  vulkan_surface_android.h  vulkan_window.h
(+53 files in other folders)
