# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("linux") {
  output_name = "sky_shell"

  sources = [
    "message_pump_glfw.cc",
    "message_pump_glfw.h",
    "platform_view_glfw.cc",
    "platform_view_glfw.h",
    "main.cc",
  ]

  deps = [
    "//base",
    "//flutter/common",
    "//flutter/shell/common",
    "//flutter/shell/gpu",
    "//flutter/shell/testing",
    "//flutter/skia",
    "//lib/ftl",
    "//third_party/glfw",
    "//third_party/glad",
  ]


if(!is_win){
  ldflags = [
    "-lGL",
  ]
} else {
    libs = [
        "opengl32.lib",
        "rpcrt4.lib",
    ]
    ldflags = [
#        "-lgdi32"
    ]
}
}
